# agentloop

./: .dockerignore  .env.example  .gitignore  Dockerfile  HEARTBEAT.md  LICENSE  Makefile  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml
agentloop/: __init__.py  config.py  database.py  main.py  models.py  plugin.py  protocols.py  schemas.py
agentloop/api/: __init__.py  agents.py  chat.py  context.py  dashboard.py  events.py  missions.py  projects.py  proposals.py  simulation.py  steps.py  triggers.py  websocket.py
agentloop/engine/: __init__.py  approval.py  movement.py  orchestrator.py  worker.py
agentloop/integrations/: __init__.py  mc_streams.py  mission_control.py  openclaw.py
agents/: deployer.yaml  dev.yaml  pm.yaml  qa.yaml  security.yaml
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentsPanel.tsx  ChatPanel.tsx  EventFeed.tsx  IsometricOffice.tsx  Office.tsx  PixelAgent.tsx  StatusPanel.tsx  SystemPanel.tsx  TasksPanel.tsx
frontend/lib/: types.ts  useWebSocket.ts
migrations/: env.py
migrations/versions/: 947f498412d3_initial_schema.py  d020083e2ec6_add_project_status_context_chat.py
plugins/llm/: hooks.py  plugin.yaml  provider.py
projects/: example.yaml  playdel.yaml
scripts/: install-launchd.sh  seed.py  seed_all_projects.py  setup-openclaw.sh  setup_crons.sh  ticker.sh
tests/: conftest.py  test_api.py  test_approval.py  test_context_chat.py  test_mc_sync.py  test_orchestrator.py  test_worker.py
(+5 files in other folders)
